@@ -1,4 +1,5 @@
 3.6
+ * Add a command to see if a Materialized View has finished building (CASSANDRA-9967)
  * Log endpoint and port associated with streaming operation (CASSANDRA-8777)
  * Print sensible units for all log messages (CASSANDRA-9692)
  * Upgrade Netty to version 4.0.34 (CASSANDRA-11096)
